# devdocs-mcp

./: .dockerignore  .gitignore  LICENSE  README.md  devdocs_mcp_server.py  docker-compose.yml  pyproject.toml
homebrew/: README.md
homebrew/Formula/: devdocs-mcp.rb
scripts/: build-devdocs.sh  cli.py  dev.py  quick-setup.sh  test.py  update-homebrew-sha.sh
tests/: test_comprehensive.py  test_devdocs_mcp.py  test_integration.py
